--- a/.github/workflows/fetch.yaml
+++ b/.github/workflows/fetch.yaml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl https://www.example.com/data.json | jq . > data.json
+        curl https://www.instagram.com/senators/?__a=1&__d=dis | jq . > data.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
