--- a/.github/workflows/fetch.yaml
+++ b/.github/workflows/fetch.yaml
@@ -4,8 +4,8 @@ on:
   push:
   workflow_dispatch:
   schedule:
-     - cron:  '6 16 * * 0'
-
+#     - cron:  '6 16 * * 0'
+    - cron: '39 9 * * *'
 jobs:
   scheduled:
     runs-on: ubuntu-latest
